src/film-database/components/iframe-controller/_iFrameController.scss
@use '/src/sass/functions' as f;
@use '/src/film-database/scss/fdMixins' as m;

.iFrameController {
  position: relative;
  z-index: 9;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 0.5rem;
  width: fit-content;
  min-height: 48px;
  padding: f.rem(6) f.rem(26) f.rem(12) f.rem(26);
  // iFrame height * 16/9 to decimal point * transform: scale(1.3) / 4
  margin-right: calc(((62svh * 1.7778) * 1.3) / 4);
  border-radius: 8px;
  background: linear-gradient(to top, rgba(0, 0, 0, 0.3), transparent);
  opacity: 0;
  transition: opacity 0.25s cubic-bezier(0, 0, 0.2, 1);
}

.iFrameController__seeker {
  position: relative;
  display: flex;
  align-items: center;
  width: 400px;
  height: 20px;
  overflow: clip;
  &:hover .iFrameController__seeker--range {
    height: 10px;
  }
  &:hover .iFrameController__seeker--slider {
    height: 10px;
    background-color: rgb(255, 255, 255, 0.8);
  }
  &--range,
  &--slider {
    position: absolute;
    width: 100%;
    height: 5px;
    border-radius: 2px;
    transition: height 0.1s ease-in-out;
  }
  &--range {
    z-index: 1;
    background-color: rgb(255, 255, 255, 0.2);
    box-shadow:
      4px 3px 6px rgba(0, 0, 0, 0.25),
      -4px 3px 6px rgba(0, 0, 0, 0.25);
  }
  &--slider {
    z-index: 2;
    width: 0px;
    background-color: rgb(255, 255, 255, 0.4);
  }
}

.iFrameController__controls {
  position: relative;
  display: flex;
  align-items: center;
  gap: f.rem(10);
  & > * {
    margin: 0 2px;
    opacity: 0.9;
    transition: opacity 0.1s cubic-bezier(0.4, 0, 1, 1);
  }
  &__button {
    position: relative;
    display: flex;
    justify-content: center;
    align-items: center;
    width: fit-content;
    max-width: calc(24px * 2);
    height: 100%;
    & svg {
      width: 1.8em;
      height: 1.8em;
      color: white;
    }
  }
  &__slider {
    position: relative;
    display: flex;
    align-items: center;
    width: 125px;
    height: 100%;
    margin-left: 6px;
    margin-right: 2px;
    &--range {
      position: relative;
      z-index: 1;
      width: 100%;
      height: 2px;
      border-radius: 2px;
      background-color: white;
    }
    &--handle {
      position: absolute;
      top: 50%;
      left: 0%;
      transform: translate(-50%, -50%);
      z-index: 2;
      width: 10px;
      height: 10px;
      border-radius: 50%;
      background-color: white;
      box-shadow:
        4px 3px 6px rgba(0, 0, 0, 0.25),
        -4px 3px 6px rgba(0, 0, 0, 0.25);
    }
  }
  &__timestamp {
    display: flex;
    gap: 4px;
    margin-left: 12px;
    margin-right: 4px;
    & > * {
      @include m.fdFontM;
      text-shadow: 0 0 2px rgba(0, 0, 0, 0.5);
    }
  }
  &__playback {
    position: relative;
    z-index: 3;
    &__cog {
      & svg {
        width: 1.8em;
        height: 1.8em;
        color: white;
      }
    }
    &__menu {
      position: absolute;
      bottom: calc(1.8em + var(--fd-gap));
      left: -150%;
      display: flex;
      flex-direction: column;
      justify-content: center;
      &[data-modal='open'] {
        opacity: 1;
      }
      &[data-modal='closed'] {
        opacity: 0;
        pointer-events: none;
      }
      & li {
        width: 100%;
        min-height: 1rem;
        background-color: hsl(0, 0%, 9%);
        &:first-child {
          border-top-right-radius: calc(var(--fd-borderRadius) / 2);
          border-top-left-radius: calc(var(--fd-borderRadius) / 2);
        }
        &:last-child {
          border-bottom-right-radius: calc(var(--fd-borderRadius) / 2);
          border-bottom-left-radius: calc(var(--fd-borderRadius) / 2);
        }
        &:hover {
          background-color: hsl(0, 0%, 4%);
        }
        & button {
          display: flex;
          gap: 0.25em;
          width: 100%;
          height: 100%;
          padding: calc(var(--fd-gap) / 2) var(--fd-gap) calc(var(--fd-gap) / 2) var(--fd-gap);
          white-space: nowrap;
          @include m.fdFontS;
          & span:nth-of-type(2) {
            font-size: calc(var(--fd-font-size-s) / 1.5);
          }
        }
      }
    }
  }
}

